Upgraded Junit and several dependencies